tests/sources/good/test2_3D.graph
16 28
2 4 8
3 5 1
4 6 11 2
7 9 1 3
6 8 13 2
7 12 5 3 14
8 10 16 6 4
15 5 7 1
4 11 10
12 9 7
9 12 3
6 10 11
15 14 5
16 6 13
16 13 8
14 15 7
