tests/sources/bad/test2_k2.graph
32 50
2 6
1 3 7
2 4 8
3 5 9
4 10
1 7 14
2 6 8 15
3 7 9
4 8 10 16
5 9 17
12 18
11 13 19
12 14 20
6 13 15 21
7 14 22
9 17 24
10 16 25
11 19 26
12 18 20 27
13 19 21 28
14 20 22 29
15 21 23 30
22 24 31
16 23 25 32
17 24 32
18 27
19 26 28
20 27 29
21 28 30
22 29 31
23 30 32
24 25 31 
